--- a/CombineAirAndSeaPorts.ipynb
+++ b/CombineAirAndSeaPorts.ipynb
@@ -128,7 +128,7 @@
        "      <th>name</th>\n",
        "      <th>city</th>\n",
        "      <th>country</th>\n",
-       "      <th>portCode</th>\n",
+       "      <th>seaPortCode</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
        "      <th>type</th>\n",
@@ -251,18 +251,18 @@
        "</div>"
       ],
       "text/plain": [
-       "             name         city               country portCode        lat  \\\n",
-       "0           Ajman        Ajman  United Arab Emirates    AEAJM  55.513643   \n",
-       "1       Abu Dhabi    Abu Dhabi  United Arab Emirates    AEAUH  54.370000   \n",
-       "2           Dubai        Dubai  United Arab Emirates    AEDXB  55.270000   \n",
-       "3     Al Fujayrah  Al Fujayrah  United Arab Emirates    AEFJR  56.330000   \n",
-       "4       Jebel Ali    Jebel Ali  United Arab Emirates    AEJEA  55.027290   \n",
-       "...           ...          ...                   ...      ...        ...   \n",
-       "1629        Coega        Coega          South Africa    ZAZBA  25.670000   \n",
-       "1630       Lusaka       Lusaka                Zambia    ZMLUN  28.322816   \n",
-       "1631     Bulawayo     Bulawayo              Zimbabwe    ZWBUQ  28.626479   \n",
-       "1632       Harare       Harare              Zimbabwe    ZWHRE  31.033510   \n",
-       "1633       Mutare       Mutare              Zimbabwe    ZWUTA  32.650351   \n",
+       "             name         city               country seaPortCode        lat  \\\n",
+       "0           Ajman        Ajman  United Arab Emirates       AEAJM  55.513643   \n",
+       "1       Abu Dhabi    Abu Dhabi  United Arab Emirates       AEAUH  54.370000   \n",
+       "2           Dubai        Dubai  United Arab Emirates       AEDXB  55.270000   \n",
+       "3     Al Fujayrah  Al Fujayrah  United Arab Emirates       AEFJR  56.330000   \n",
+       "4       Jebel Ali    Jebel Ali  United Arab Emirates       AEJEA  55.027290   \n",
+       "...           ...          ...                   ...         ...        ...   \n",
+       "1629        Coega        Coega          South Africa       ZAZBA  25.670000   \n",
+       "1630       Lusaka       Lusaka                Zambia       ZMLUN  28.322816   \n",
+       "1631     Bulawayo     Bulawayo              Zimbabwe       ZWBUQ  28.626479   \n",
+       "1632       Harare       Harare              Zimbabwe       ZWHRE  31.033510   \n",
+       "1633       Mutare       Mutare              Zimbabwe       ZWUTA  32.650351   \n",
        "\n",
        "            lon     type  \n",
        "0     25.405217  seaport  \n",
@@ -286,7 +286,9 @@
     }
    ],
    "source": [
+    "sea_ports_df = sea_ports_df.rename(columns = {'portCode': 'seaPortCode'})\n",
     "sea_ports_df['type'] = 'seaport'\n",
+    "\n",
     "sea_ports_df"
    ]
   },
@@ -565,7 +567,7 @@
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
        "      <th>type</th>\n",
-       "      <th>portCode</th>\n",
+       "      <th>seaPortCode</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -720,18 +722,18 @@
        "9330                                       Harare        Harare   \n",
        "9331                                       Mutare        Mutare   \n",
        "\n",
-       "               country iata  icao        lat         lon     type portCode  \n",
-       "0     Papua New Guinea  GKA  AYGA  -6.081690  145.391998  airport      NaN  \n",
-       "1     Papua New Guinea  MAG  AYMD  -5.207080  145.789002  airport      NaN  \n",
-       "2     Papua New Guinea  HGU  AYMH  -5.826790  144.296005  airport      NaN  \n",
-       "3     Papua New Guinea  LAE  AYNZ  -6.569803  146.725977  airport      NaN  \n",
-       "4     Papua New Guinea  POM  AYPY  -9.443380  147.220001  airport      NaN  \n",
-       "...                ...  ...   ...        ...         ...      ...      ...  \n",
-       "9327      South Africa  NaN   NaN  25.670000  -33.770000  seaport    ZAZBA  \n",
-       "9328            Zambia  NaN   NaN  28.322816  -15.387526  seaport    ZMLUN  \n",
-       "9329          Zimbabwe  NaN   NaN  28.626479  -20.132507  seaport    ZWBUQ  \n",
-       "9330          Zimbabwe  NaN   NaN  31.033510  -17.825166  seaport    ZWHRE  \n",
-       "9331          Zimbabwe  NaN   NaN  32.650351  -18.975771  seaport    ZWUTA  \n",
+       "               country iata  icao        lat         lon     type seaPortCode  \n",
+       "0     Papua New Guinea  GKA  AYGA  -6.081690  145.391998  airport         NaN  \n",
+       "1     Papua New Guinea  MAG  AYMD  -5.207080  145.789002  airport         NaN  \n",
+       "2     Papua New Guinea  HGU  AYMH  -5.826790  144.296005  airport         NaN  \n",
+       "3     Papua New Guinea  LAE  AYNZ  -6.569803  146.725977  airport         NaN  \n",
+       "4     Papua New Guinea  POM  AYPY  -9.443380  147.220001  airport         NaN  \n",
+       "...                ...  ...   ...        ...         ...      ...         ...  \n",
+       "9327      South Africa  NaN   NaN  25.670000  -33.770000  seaport       ZAZBA  \n",
+       "9328            Zambia  NaN   NaN  28.322816  -15.387526  seaport       ZMLUN  \n",
+       "9329          Zimbabwe  NaN   NaN  28.626479  -20.132507  seaport       ZWBUQ  \n",
+       "9330          Zimbabwe  NaN   NaN  31.033510  -17.825166  seaport       ZWHRE  \n",
+       "9331          Zimbabwe  NaN   NaN  32.650351  -18.975771  seaport       ZWUTA  \n",
        "\n",
        "[9332 rows x 9 columns]"
       ]
